[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[package]
name = "snake"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
burn = { version = "0.15.0", default-features = false, optional = true }
fastrand = "2.3.0"
ratatui = { version = "0.29.0", optional = true }

[features]
default = ["rl", "ndarray"]

tui = ["dep:ratatui"]

rl = ["dep:burn", "burn/default", "burn/autodiff"]
wgpu = ["burn/wgpu"]
ndarray = ["burn/ndarray"]
