[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[package]
name = "snake"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rl = { git = "https://github.com/sehnryr/rl", branch = "dev", optional = true }
fastrand = "2.3.0"
ratatui = { version = "0.29.0", optional = true }

[features]
default = ["tui", "rl"]

tui = ["dep:ratatui"]

rl = ["dep:rl", "rl/wgpu", "ratatui/unstable-widget-ref"]
